--- a/CeraParkUpdated/indexStyle.css
+++ b/CeraParkUpdated/indexStyle.css
@@ -25,13 +25,13 @@ body, html {
 /*set first image below the fixed menu*/
 .topWaterBG {
     margin-top: 4.375em;
-    background-image: url("cpPictures/IMG_2106.jpg");
+    background-image: url("images/IMG_2106.jpg");
     min-height: 100%;
 }
 
 /*Lines each image up below the other*/
 .bottomWaterBG {
-    background-image: url("cpPictures/IMG_2106.jpg");
+    background-image: url("images/IMG_2106.jpg");
     height: 100%;
 }
 
@@ -42,7 +42,7 @@ body, html {
 }
 
 .poolBG {
-    background-image: url("cpPictures/IMG_1935.jpg");
+    background-image: url("images/IMG_1935.jpg");
     min-height: 31.25em;
     max-height: 62.5em;
 }
