--- a/cpWebsite/navBar.css
+++ b/cpWebsite/navBar.css
@@ -50,3 +50,42 @@
     border-radius: .25em;
 
 }
+
+/* Hide the link that should open and close the topnav on small screens */
+.navbar .icon {
+    display: none;
+}
+
+/*For viewing on smaller screens, the menu will adjust*/
+@media screen and (max-width: 600px) {
+    /*.navbar a {*/
+        /*float: none;*/
+        /*display: block;*/
+        /*text-align: left;*/
+    /*}*/
+
+    /*.navBarMenu {*/
+        /*float: none;*/
+    /*}*/
+
+    .navbar a:not(:first-child){
+        display: none
+    }
+    .navbar a.icon{
+        float:right;
+        display:block;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .navbar .responsive {
+        position: relative;
+        right: 0;
+        top: 0;
+    }
+    .navbar .responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
