--- a/cpWebsite/indexStyle.css
+++ b/cpWebsite/indexStyle.css
@@ -8,7 +8,7 @@
 body, html {
     height: 100%;
     /*400 is normal weight, 1.8 is line-height*/
-    font: 400 1.125em/1.8 'Poppins', sans-serif;
+    font: 1.125em'Poppins', sans-serif;
 
 }
 
