--- a/cpWebsite/photosStyle.css
+++ b/cpWebsite/photosStyle.css
@@ -29,11 +29,13 @@ body, html {
     position: absolute;
     top: 50%;
     width: auto;
+    margin-top: -1.5%;
     padding: 2%;
     color: white;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
     user-select: none;
 }
 
