--- a/cpWebsite/photosStyle.css
+++ b/cpWebsite/photosStyle.css
@@ -15,6 +15,7 @@ body, html {
 
 /* Slideshow container */
 .slideshowContainer {
+    padding-top: 1.5625em;
     position: relative;
     margin: auto;
 }
