--- a/cpWebsite/photosStyle.css
+++ b/cpWebsite/photosStyle.css
@@ -15,7 +15,8 @@ body, html {
 
 /* Slideshow container */
 .slideshowContainer {
-    padding-top: 1.5625em;
+    width: 100%;
+    padding-top: 4em;
     position: relative;
     margin: auto;
 }
