--- a/CeraParkRedesign/formsCSS.css
+++ b/CeraParkRedesign/formsCSS.css
@@ -29,7 +29,7 @@ body, html {
 
 .caption span.border {
     background-color: #565F69;
-    color: #fff;
+    color: white;
     padding: 5vh;
     font-size: 4vh;
     padding-left:6vh;
