--- a/CeraParkRedesign/formsCSS.css
+++ b/CeraParkRedesign/formsCSS.css
@@ -80,8 +80,9 @@ button{
 
 @media screen and (max-width: 600px) {
     .col {
-        float:left;
-        width: 100%;
+        margin-left:auto;
+        margin-right:auto;
+        width: 100vh;
     }
 
 }
